Fixed pictures not showing

--- a/src/styles/components/_PictureProjects.scss
+++ b/src/styles/components/_PictureProjects.scss
@@ -8,6 +8,10 @@
   align-items: center;
   flex-direction: column;
   
+  iframe {
+    position: static !important;
+  }
+
   h1 {
     text-align: center;
     font-size: $title;
